<resources>
    <string name="app_name">materialLesson</string>

    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="atac_galactik">Захватить галактику</string>
    <string name="not_war">Выбрать мирную планету</string>
    <string name="like_word">Мир во всем мире</string>
    <string name="note">Заметки</string>
    <string name="note_is_empty">Note isEmpty</string>
</resources>